# TH_Line

./: README.md
timeseries/: main.py  make_timeseries_nc.py  plot_timeseries  plot_timeseries.py  pyproject.toml  timeseries.py
timeseries/data/: tanom_timeseries_data.nc  tanom_timeseries_data_TEST.nc
timeseries/utils/: anomaly.py  transects_func.py  woa_salt.py  woa_temp.py
transects/: merge_seaglider_data.py  plot_anomaly_transect.py  pyproject.toml
