[project]
name = "timeseries"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cmocean>=4.0.3",
    "matplotlib>=3.9.4",
    "netcdf4>=1.7.2",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "rich>=14.3.1",
    "scipy>=1.13.1",
    "xarray>=2024.7.0",
]
